corpus/cpp/template/case-02/snapshots/gcc15/render.concise.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: template instantiation failed
--> src/main.cpp:6:15
help: start from the first user-owned template frame and match template arguments
why: src/main.cpp:6:15: error: no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:15
|     expect_ptr(value);
|               ^
while instantiating:
  - src/main.cpp:2:6 template argument deduction/substitution failed:
raw:
  src/main.cpp:6:15: error: no matching function for call to 'expect_ptr(int&)'
other errors:
note: omitted additional details; rerun with --formed-profile=verbose